Salesforce CPQ/main/default/objects/QuoteLineGroup__c/QuoteLineGroup__c.object-meta.xml
<CustomObject>
    <customHelpPage>QuoteLineGroupHelp</customHelpPage>
    <description>Group of line items on a quote.</description>
    <label>Quote Line Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>