Salesforce CPQ/main/default/objects/QuoteLineGroup__c/fields/CustomerTotal__c.field-meta.xml
<CustomField>
    <fullName>CustomerTotal__c</fullName>
    <description>Total for this group&apos;s line items before any partner discounts are applied.</description>
    <inlineHelpText>Total for this group&apos;s line items before any partner discounts are applied.</inlineHelpText>
    <label>Customer Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>