Salesforce CPQ/main/default/objects/QuoteLineGroup__c/fields/Favorite__c.field-meta.xml
<CustomField>
    <fullName>Favorite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Favorite to which this Quote Line Group belongs.</description>
    <inlineHelpText>Favorite to which this Quote Line Group belongs.</inlineHelpText>
    <label>Favorite</label>
    <referenceTo>Favorite__c</referenceTo>
    <relationshipLabel>Quote Line Groups</relationshipLabel>
    <relationshipName>QuoteLineGroups</relationshipName>
    <type>Lookup</type>
</CustomField>