Salesforce CPQ/main/default/objects/QuoteLineGroup__c/fields/Optional__c.field-meta.xml
<CustomField>
    <fullName>Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the entire group as optional.</description>
    <inlineHelpText>Marks the entire group as optional.</inlineHelpText>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>