Salesforce CPQ/main/default/objects/QuoteLineGroup__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Quote to which this group belongs.</description>
    <inlineHelpText>Quote to which this group belongs.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Line Groups</relationshipLabel>
    <relationshipName>LineItemGroups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>