Salesforce CPQ/main/default/objects/QuoteLineGroup__c/fields/QuoteProcess__c.field-meta.xml
<CustomField>
    <fullName>QuoteProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote process used with this group.</description>
    <inlineHelpText>Quote process used with this group. Overrides the quote level field.</inlineHelpText>
    <label>Quote Process</label>
    <referenceTo>QuoteProcess__c</referenceTo>
    <relationshipLabel>Quote Line Groups</relationshipLabel>
    <relationshipName>QuoteLineGroups</relationshipName>
    <type>Lookup</type>
</CustomField>