Salesforce CPQ/main/default/objects/QuoteLineGroup__c/fields/SolutionGroup__c.field-meta.xml
<CustomField>
    <fullName>SolutionGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Solution group from which this quote group was generated (if any).</description>
    <inlineHelpText>Solution group from which this quote group was generated (if any).</inlineHelpText>
    <label>Solution Group</label>
    <referenceTo>SolutionGroup__c</referenceTo>
    <relationshipLabel>Quote Line Groups</relationshipLabel>
    <relationshipName>QuoteLineGroups</relationshipName>
    <type>Lookup</type>
</CustomField>