Salesforce CPQ/main/default/objects/QuoteLineGroup__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source of cloned quote line group.</description>
    <inlineHelpText>Source of cloned quote line group.</inlineHelpText>
    <label>Source</label>
    <referenceTo>QuoteLineGroup__c</referenceTo>
    <relationshipLabel>Quote Line Groups</relationshipLabel>
    <relationshipName>Clones</relationshipName>
    <type>Lookup</type>
</CustomField>