Salesforce CPQ/main/default/objects/QuoteLineGroup__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Start date for subscriptions in this group.</description>
    <inlineHelpText>Start date for subscriptions in this group.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>