Salesforce CPQ/main/default/objects/QuoteLineGroup__c/validationRules/Invalid_Subscription_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Subscription_Term</fullName>
    <active>true</active>
    <description>Validates that subscription term is positive</description>
    <errorConditionFormula>IF( AND( NOT(ISNULL(SubscriptionTerm__c)), SubscriptionTerm__c &lt;= 0), TRUE, null)</errorConditionFormula>
    <errorMessage>The subscription term must be a positive number.</errorMessage>
</ValidationRule>